--- a/style.css
+++ b/style.css
@@ -39,7 +39,10 @@ a {
 }
 
 .nav-link:hover {
-    color: blue;
+    background-color: #ee6806;
+    padding: 10px;
+    border-radius: 5%;
+   
 }
 
 .hamburger {
@@ -80,11 +83,11 @@ a {
 .hero-con {
     width: 100%;
     height: 100%;
-
-    margin: 0 auto;
+    padding: 0 44px;
+    
     align-items: center;
     display: flex;
-    justify-content: center;
+   
 
 }
 
@@ -211,12 +214,11 @@ a {
 #services {
     background: black;
     width: 100%;
-    height: auto;
     align-items: center;
     justify-content: center;
     margin: auto;
     padding-top: 150px;
-    padding-bottom: 100px ;
+    padding-bottom: 150px ;
 
 
 }
@@ -532,7 +534,7 @@ a {
     bottom: 0;
    
     left: 50%;
-    transform: translateX(-40%) translateY(30%);
+    transform: translateX(-40%) translateY(40%);
     position: absolute;
     z-index: 99;
 }
@@ -579,7 +581,7 @@ a {
 .bottom:hover ul li .lis-con{
     visibility: visible;
     opacity: 1 ;
-    transform: translateX(-35%) translateY(-20%);
+    transform: translateX(-35%) translateY(-35%);
 }
 /*card styling*/
 .lis-con{
@@ -634,15 +636,203 @@ a {
     z-index: -1;
 }
 
-/*----About--*/
+/*----contac--*/
+
+.social-bar{
+    background: #202f52;
+    width: 35%;
+    padding: 30px;
+    justify-content: center;
+    align-items: center;
+  
+    
+}
+.social-bar h2{
+    width: 100%;
+    color: #ffffff;
+    font-size: 36px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.info{
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+.info li{
+    padding: 20px 0px 20px 0;
+}
+.info i{
+    position: relative;
+    font-size: 3em;
+    color: #ffffff;
+    margin: 0 10px;
+    text-align: center;
+    align-items: center;
+}
+.info .loco{
+    font-size: 18px;
+    padding: 2px 10px;
+    color: #ffffff;
+}
 
 
 
-#serv {
+
+ .social-icon {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.social-icon li{
+    list-style: none;
+
+}
+
+.social-icon li a {
+    font-size: 2.5em;
+    color: #ee6806;
+    margin: 0 10px;
+    display: inline-block;
+    transition: .5s;
+
+}
+
+
+.info .social-icon li a:hover {
+    transition: translateY(-10px);
+
+}
+
+
+
+
+
+
+.contact {
     background: white;
     width: 100%;
-    height: 50vh;
+    display: flex;
 }
+.contact-form{
+    width: 65%;
+    padding: 30px;
+}
+.contact-form h2{
+    width: 100%;
+    color: black;
+    font-size: 36px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.contact-form .row100{
+    position: relative;
+    width: 100%;
+    display: flex;
+    grid-template-columns: repeat(auto-fit,minmax(3000px,1fr));    
+}
+.contact-form .row100 .col{
+    position: relative;
+    width: 100%;
+    padding: 0 10px;
+    margin: 30px 0 10px;
+    transform: .5s;
+}
+.contact-form .row100 .inputBox{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    color: black;
+}
+.contact-form .row100 .inputBox input, 
+.contact-form .row100 .inputBox.textarea textarea{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    box-shadow: none;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    padding: 2px 10px;
+    z-index: 1;
+    color: #ffffff;
+
+}
+.contact-form .row100 .inputBox .text{
+    position: absolute;
+    top: 0;
+    left: 0;
+    line-height: 40px;
+    font-size: 18px;
+    padding: 0 10px;
+    display: block;
+    transition: .5s;
+    pointer-events: none;
+}
+.contact-form .row100 .inputBox input:focus + .text, .contact-form .row100 .inputBox input:valid + .text{
+    top: -35px;
+    left: -10px;
+}
+.contact-form .row100 .inputBox .line{
+    position: absolute;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background: black;
+    transition: .5s;
+    border-radius: 2px;
+    pointer-events: none;
+}
+.contact-form .row100 .inputBox input:focus ~ .line, .contact-form .row100 .inputBox input:valid ~ .line{
+    height: 100%;
+}
+.contact-form .row100 .inputBox .textarea{
+    position: relative;
+    width: 100%;
+    height: 40px;
+    padding: 10px 0;
+
+
+}
+.contact-form .row100 .inputBox .textarea textarea{
+    height: 100%;
+    resize: none;
+   
+}
+
+.contact-form .row100 .inputBox textarea:focus + .text, 
+.contact-form .row100 .inputBox textarea:valid + .text{
+    top: -35px;
+    left: -10px;
+}
+.contact-form .row100 .inputBox textarea:focus ~ .line, .contact-form .row100 .inputBox textarea:valid ~ .line{
+    height: 100%;
+}
+input[type="submit"]{
+    border: none;
+    padding: 7px 35px;
+    cursor: pointer;
+    outline: none;
+    background: black;
+    color: #ffffff;
+    font-size: 18px;
+    border-radius: 20px;
+}
+input[type="submit"]:hover{
+    border: 1px black solid;
+    background: #ffffff;
+    color: black;
+}
+
+
+
+
+
+
 
 #servs {
     background: blue;
@@ -785,6 +975,27 @@ footer p {
         margin-top: 1rem;
 
     }
+    .pic{
+        height: 80px;
+    width: 80px;
+    }
+    .pics{
+    
+        height: 80px;
+        width: 180px;
+        
+    }
+    
+    .contact {
+        
+        display: block;
+    }
+    .social-bar{
+        width: 100%;
+    }
+    .contact-form{
+        width: 100%;
+    }
 
     footer .social-icon,
     .footer-men {
@@ -820,7 +1031,7 @@ footer p {
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: fade 10s forwards;
+    animation: fade 5s forwards;
   
 }
 @keyframes fade{
@@ -835,7 +1046,7 @@ footer p {
 
 .loader {
     display: inline-block;
-    width: 60px;
+    width: 80px;
     height: 460px;
     position: relative;
     border: 4px solid #ee6806;
